--- a/portfolio.html
+++ b/portfolio.html
@@ -381,6 +381,23 @@
             </li>
           </ul>
         </div>
+        <form class="sign-form">
+          <p class="sign-label">Подпишитесь на рассылку</p>
+          <div class="signup-field">
+            <input
+              type="email"
+              name="sign-up"
+              class="sign-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="sign-button">
+              <span class="sign-text"> Подписаться </span>
+              <svg class="sign-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
