--- a/portfolio.html
+++ b/portfolio.html
@@ -391,8 +391,8 @@
               placeholder="E-mail"
             />
             <button type="submit" class="sign-button">
-              <span class="sign-text"> Подписаться </span>
-              <svg class="sign-icon" width="24" height="24">
+              <span class="sign-button__text"> Подписаться </span>
+              <svg class="sign-button__icon" width="24" height="24">
                 <use href="./images/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
